# scratch-former

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
content/: run2.txt  val_ppl.csv
scratch_former/: __init__.py
scratch_former/data/: data.py
scratch_former/layers/: __init__.py  layers.py
scratch_former/model/: model.py
scratch_former/sample/: __init__.py  sample.py
scripts/: generate.py  plot_val_loss.py  train.py  validate.py
