[metadata]
name = scratch-former
description = Implementing a language generating transformer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jrussell25/scratch-former
author = John Russell
author_email = johncrussell25@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
project_urls =
    Source Code =https://github.com/jrussell25/scratch-former

[options]
packages = find:
install_requires =
    torch
python_requires = >=3.10
zip_safe = False

[options.extras_require]
dev =
    ruff
    mypy
    pre-commit
    pytest

test =
    pytest
    pytest-cov

[bdist_wheel]
universal = 1
